--- a/public/assets/scss/core/_reset.scss
+++ b/public/assets/scss/core/_reset.scss
@@ -502,7 +502,8 @@ ul {
 // .staking-main{
 //     padding-top: 117px;
 // }
-.top-space {}
+.top-space {
+}
 
 .cmn_dasdrd_table {
   background: $body-bg;
@@ -615,7 +616,6 @@ ul {
 }
 
 @media (max-width: 576px) {
-
   .cmn_dasdrd_table .table th:first-child,
   .cmn_dasdrd_table .table td:first-child,
   .cmn_dasdrd_table .table th:nth-child(2),
@@ -1149,7 +1149,6 @@ body {
     top: 94%;
     left: 42%;
   }
-
 }
 
 .delegate_btn .tool-desc.tool-desc-grid {
@@ -1198,7 +1197,7 @@ body {
   position: relative;
 }
 
-.claim_btn_wrapper button:hover~.tool-desc {
+.claim_btn_wrapper button:hover ~ .tool-desc {
   display: block;
 }
 
@@ -1207,7 +1206,7 @@ body {
   pointer-events: all;
 }
 
-.claim_btn_wrapper button.hd-sel.disabled:hover~.tool-desc {
+.claim_btn_wrapper button.hd-sel.disabled:hover ~ .tool-desc {
   display: block;
 }
 
@@ -1227,11 +1226,11 @@ body {
   font-size: 35px;
 }
 
-.select_chain>div {
+.select_chain > div {
   width: 100%;
 }
 
-.select_chain>div div#mui-component-select-chain {
+.select_chain > div div#mui-component-select-chain {
   display: flex;
   align-items: center;
 }
@@ -1290,6 +1289,37 @@ td.no_record img {
   display: none;
 }
 
+.trns_top_btns_area.row {
+  width: 65%;
+  @media #{$max-md} {
+    margin-bottom: 10px;
+    width: 100%;
+  }
+}
+.transaction_top_wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  @media #{$max-md} {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+.transaction_top_wrapper .dropdwn-sec {
+  width: 35%;
+  text-align: end;
+  @media #{$max-md} {
+    margin-top: 6px;
+    width: 100%;
+    padding-right: 10px;
+  }
+  @media #{$max-sm} {
+    flex-direction: row;
+    justify-content: end;
+    align-items: center;
+  }
+}
 .switch-wrapper {
   .switch {
     position: relative;
@@ -1356,17 +1386,17 @@ td.no_record img {
     opacity: 0;
   }
 
-  .switch-input:checked~.switch-label {
+  .switch-input:checked ~ .switch-label {
     background: #f27c02;
     box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.15),
       inset 0 0 3px rgba(0, 0, 0, 0.2);
   }
 
-  .switch-input:checked~.switch-label:before {
+  .switch-input:checked ~ .switch-label:before {
     opacity: 0;
   }
 
-  .switch-input:checked~.switch-label:after {
+  .switch-input:checked ~ .switch-label:after {
     opacity: 1;
   }
 
@@ -1396,7 +1426,7 @@ td.no_record img {
     box-shadow: inset 0 1px rgba(0, 0, 0, 0.02);
   }
 
-  .switch-input:checked~.switch-handle {
+  .switch-input:checked ~ .switch-handle {
     left: 44px;
     box-shadow: -1px 1px 5px rgba(0, 0, 0, 0.2);
   }
@@ -1504,7 +1534,6 @@ td.no_record img {
 }
 
 @media (max-width: 576px) {
-
   .modal-content .primary-btn,
   .blue-btn {
     min-height: 55px;
