fix design bugs

--- a/public/assets/scss/pages/map.scss
+++ b/public/assets/scss/pages/map.scss
@@ -254,3 +254,13 @@
         text-align: center;
     }
 }
+
+@media only screen and (max-width: 359px) {
+    .cus-label {
+        flex-wrap: wrap;
+    }
+
+    .map-card .label-horiz:last-child {
+        margin-top: 10px;
+    }
+}
