--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -430,7 +430,6 @@ span.transactionLoader {
   }
 
   .dropdown-toggle {
-
     &:focus,
     &:hover,
     &:visited {
@@ -468,12 +467,12 @@ span.transactionLoader {
   position: relative;
 }
 
-#account-dropdown~.dropdown-menu.show {
+#account-dropdown ~ .dropdown-menu.show {
   left: 0;
   transform: translate(-90%);
 }
 
-.inner-header-dropwdown #account-dropdown~.dropdown-menu.show {
+.inner-header-dropwdown #account-dropdown ~ .dropdown-menu.show {
   left: 0;
   transform: translate(-84%);
 }
@@ -665,15 +664,15 @@ span.transactionLoader {
   top: 2px;
 }
 
-input:checked+.slider {
+input:checked + .slider {
   background-color: #f28102;
 }
 
-input:focus+.slider {
+input:focus + .slider {
   box-shadow: 0 0 1px #2196f3;
 }
 
-input:checked+.slider:before {
+input:checked + .slider:before {
   -webkit-transform: translateX(22px);
   -ms-transform: translateX(22px);
   transform: translateX(22px);
@@ -1046,11 +1045,11 @@ input:checked+.slider:before {
   transition: all 0.4s ease-in-out;
 }
 
-.toggle input:checked+.slider {
+.toggle input:checked + .slider {
   background-color: $primary-three;
 }
 
-.toggle input:checked+.slider::before {
+.toggle input:checked + .slider::before {
   transform: translateX(calc(var(--width) - var(--height)));
 }
 
@@ -1085,11 +1084,11 @@ input:checked+.slider:before {
   transition: all 0.4s ease-in-out;
 }
 
-.toggle input:checked~.labels::after {
+.toggle input:checked ~ .labels::after {
   opacity: 0;
 }
 
-.toggle input:checked~.labels::before {
+.toggle input:checked ~ .labels::before {
   opacity: 1;
 }
 
@@ -1127,7 +1126,6 @@ input:checked+.slider:before {
 
 /** On Off Switch **/
 .cmn-input-bg {
-
   .cmn_modal input[type="email"],
   .cmn_modal input[type="text"] {
     background-color: $body-bg-800;
@@ -1580,10 +1578,6 @@ input:checked+.slider:before {
 
     @media #{$max-xl} {
       height: 580px;
-    }
-
-    @media #{$max-sm} {
-      height: 560px;
     }
   }
 }
@@ -2846,7 +2840,10 @@ input:checked+.slider:before {
   }
 }
 
-.reward-calculator .rewards-section-cal .side-card .card-list-item:nth-child(odd) {
+.reward-calculator
+  .rewards-section-cal
+  .side-card
+  .card-list-item:nth-child(odd) {
   border-right: none;
 }
 
@@ -3006,7 +3003,7 @@ input:checked+.slider:before {
   }
 }
 
-.captcha-wrap>div>div>div {
+.captcha-wrap > div > div > div {
   margin: 0 auto;
 }
 
@@ -3281,10 +3278,12 @@ input:-internal-autofill-selected {
 
 .cus-shimer {
   .shimmer {
-    background: linear-gradient(to right,
-        #f6f6f6 -62%,
-        #f0f0f0 -42%,
-        #596380 60%);
+    background: linear-gradient(
+      to right,
+      #f6f6f6 -62%,
+      #f0f0f0 -42%,
+      #596380 60%
+    );
     animation: shimmer 5s linear infinite forwards;
   }
 
@@ -3623,7 +3622,6 @@ input:-internal-autofill-selected {
   width: 100%;
 
   .tool-ico {
-
     // width: 25px;
     // height: 25px;
     // background:$primary;
@@ -3639,7 +3637,7 @@ input:-internal-autofill-selected {
     //     font-size: 14px;
     //     font-weight: bold;
     // }
-    ~.tool-desc {
+    ~ .tool-desc {
       display: none;
       position: absolute;
       background-color: #fff;
@@ -3705,14 +3703,14 @@ input:-internal-autofill-selected {
     }
 
     &:hover {
-      ~.tool-desc {
+      ~ .tool-desc {
         display: block;
         opacity: 1;
         z-index: 1;
       }
     }
 
-    ~.tool-desc.tool-desc-grid {
+    ~ .tool-desc.tool-desc-grid {
       top: -100%;
       left: 3%;
 
@@ -3791,7 +3789,7 @@ input:-internal-autofill-selected {
   }
 }
 
-.ff-mos .get-info:hover~.tool-desc {
+.ff-mos .get-info:hover ~ .tool-desc {
   display: block;
 }
 
@@ -3807,11 +3805,11 @@ input:-internal-autofill-selected {
   left: -7%;
 }
 
-.innerDivBgBlack>div {
+.innerDivBgBlack > div {
   background-color: black !important;
 }
 
-.innerDivBgBlack>a {
+.innerDivBgBlack > a {
   line-height: 1.25rem;
   // font-family: "MADE Okine Sans PERSONAL USE" !important;
   font-size: 16px !important;
@@ -4218,7 +4216,6 @@ input:-internal-autofill-selected {
 }
 
 .fix-coin-field {
-
   // .lite-color{
   //     // width: 100px;
   //     // overflow: hidden;
@@ -5017,7 +5014,6 @@ section.del-grid-section .txt-emp {
 }
 
 .blk-dta {
-
   label,
   .amt-val {
     font-size: 16px;
@@ -5141,7 +5137,7 @@ section.del-grid-section .txt-emp {
   height: 88%;
 }
 
-.loading-steps .step_wrapper>div {
+.loading-steps .step_wrapper > div {
   width: 33px;
   background: #666;
   border-radius: 50px;
@@ -5159,12 +5155,15 @@ section.del-grid-section .txt-emp {
   justify-content: space-evenly;
 }
 
-.loading-steps .step_wrapper>div .MuiCircularProgress-root.MuiCircularProgress-indeterminate {
+.loading-steps
+  .step_wrapper
+  > div
+  .MuiCircularProgress-root.MuiCircularProgress-indeterminate {
   width: 75% !important;
   height: 75% !important;
 }
 
-.loading-steps>div::after {
+.loading-steps > div::after {
   content: "";
   position: absolute;
   width: 2px;
@@ -5209,7 +5208,7 @@ section.del-grid-section .txt-emp {
   padding-bottom: 4px;
 }
 
-.step_wrapper.completed>div {
+.step_wrapper.completed > div {
   background: #f16e0f;
 }
 
@@ -5230,11 +5229,11 @@ section.del-grid-section .txt-emp {
   color: #ccc;
 }
 
-.loading-steps>div.completed::after {
+.loading-steps > div.completed::after {
   background-color: #f1740f;
 }
 
-.loading-steps>div:last-of-type::after {
+.loading-steps > div:last-of-type::after {
   display: none;
 }
 
@@ -5535,7 +5534,6 @@ section.del-grid-section .txt-emp {
 }
 
 .sec-format {
-
   h6,
   .over-text {
     font-size: 16px;
@@ -5662,7 +5660,10 @@ body::-webkit-scrollbar,
 .fade.shib-popup.stak-pop.unbd-info-pop.modal.show::-webkit-scrollbar {
   display: none;
 }
-
+.network_Icon_Wrapper {
+  width: 26px;
+  height: 26px;
+}
 .no-found.no-records-wrapper {
   width: 100%;
   height: 100%;
@@ -5673,7 +5674,7 @@ body::-webkit-scrollbar,
   background: #151b28;
 }
 
-.del-tab-content>div>h5 {
+.del-tab-content > div > h5 {
   line-height: 30px;
   margin-bottom: 25px !important;
 }
@@ -5694,15 +5695,24 @@ body::-webkit-scrollbar,
     flex-direction: column-reverse;
   }
 
-  .reward-calculator section.rewards-section-cal .main-container .custom-column:first-of-type {
+  .reward-calculator
+    section.rewards-section-cal
+    .main-container
+    .custom-column:first-of-type {
     border-right: none;
   }
 
-  .reward-calculator .rewards-section-cal .side-card .card-list-item:nth-child(3) {
+  .reward-calculator
+    .rewards-section-cal
+    .side-card
+    .card-list-item:nth-child(3) {
     border-right: 1px solid #666;
   }
 
-  .reward-calculator section.rewards-section-cal .main-container .custom-column:last-of-type {
+  .reward-calculator
+    section.rewards-section-cal
+    .main-container
+    .custom-column:last-of-type {
     margin-bottom: 0 !important;
   }
 
@@ -5710,7 +5720,11 @@ body::-webkit-scrollbar,
     padding-bottom: 20px;
   }
 
-  .reward-calculator section.rewards-section-cal .card-list-item:first-of-type h2 span {
+  .reward-calculator
+    section.rewards-section-cal
+    .card-list-item:first-of-type
+    h2
+    span {
     font-size: 40px;
   }
 }
@@ -5796,7 +5810,6 @@ body::-webkit-scrollbar,
 
 .burn-table {
   table {
-
     th,
     td {
       color: rgba($white, 0.8);
